<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.xsavikx</groupId>
    <artifactId>androidscreencast</artifactId>
    <version>0.0.9s-SNAPSHOT</version>
    <name>Android Screencast</name>
    <properties>
        <spring.version>4.3.5.RELEASE</spring.version>
        <ddmlib.version>25.2.0</ddmlib.version>
        <log4j.version>1.2.17</log4j.version>
        <guava.version>21.0</guava.version>
        <main.class>com.github.xsavikx.androidscreencast.Main</main.class>
        <jdk.version>1.8</jdk.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <adb.folder>${project.basedir}/adb</adb.folder>
        <adb.folder.linux>${adb.folder}/linux</adb.folder.linux>
        <adb.folder.windows>${adb.folder}/windows</adb.folder.windows>
        <adb.folder.macosx>${adb.folder}/macosx</adb.folder.macosx>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.android.tools.ddms</groupId>
            <artifactId>ddmlib</artifactId>
            <version>${ddmlib.version}</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${main.class}</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>executable</shadedClassifierName>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${main.class}</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <descriptors>
                        <descriptor>src/assembly/windows.xml</descriptor>
                        <descriptor>src/assembly/linux.xml</descriptor>
                        <descriptor>src/assembly/macosx.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jarsigner-plugin</artifactId>
                        <version>1.4</version>
                        <executions>
                            <execution>
                                <id>sign</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <archiveDirectory>${project.build.directory}</archiveDirectory>
                            <keystore>keystore.jks</keystore>
                            <alias>acast</alias>
                            <storepass>{FI0aje84ll0HDfvsXBhLQHvBFso9Mam5Ae37ucXm0SU=}</storepass>
                            <keypass>{FI0aje84ll0HDfvsXBhLQHvBFso9Mam5Ae37ucXm0SU=}</keypass>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <url>http://xsavikx.github.io/AndroidScreencast</url>
    <ciManagement>
        <url>https://travis-ci.org/xSAVIKx/AndroidScreencast</url>
        <system>Travis-CI</system>
    </ciManagement>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/xSAVIKx/AndroidScreencast/issues</url>
    </issueManagement>
    <description>AndroidScreencast - View and control your android iDevice on PC.

        This project gives you opportunity to use your phone even with broken screen.

        Features:
        No client needed
        Support for Tap and Swipe gestures
        Write messages using PC keyboard
        Support for landscape mode
        Browse your phone files on PC
        Record video of your phone screen while browsing
    </description>
</project>
